--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 gurobipy==11.0.3
 matplotlib==3.6.3
 numba==0.56.4
+plotly==5.24.1
 scipy==1.10.0
+streamlit==1.41.1
 tensorboard==2.11.0
 tensorboard_logger==0.1.0
 torch==1.13.1
